--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -74,6 +74,10 @@
   border: 1px solid #1b1b1b;
   border-radius: 6px;
 }
+.box:hover {
+  background: #9c9c9c;
+  color: #000;
+}
 .partnerLogo {
   /* min-width: 150px; */
 }
