--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,18 @@ body {
   font-family: "IBM Plex Mono", monospace, sans-serif;
 }
 
+.layoutWrapper {
+  max-width: 1400px;
+  margin: auto;
+}
+
 a {
   text-decoration: none;
   color: #9c9c9c;
+}
+
+h1 {
+  margin: 1rem 0;
+  color: #fff;
+  /* font-size: 44px; */
 }
